# obs-lottie-lower-third

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  buildspec.json
.github/actions/build-plugin/: action.yaml
.github/scripts/: Build-Windows.ps1
.github/workflows/: build-project.yaml  push.yaml
cmake/: ThorVGVendored.cmake
cmake/linux/: defaults.cmake
src/: cJSON.c  cJSON.h  lottie-lower-third-exit.h  lottie-lower-third-internal.h  lottie-lower-third-lottie.c  lottie-lower-third-lottie.h  lottie-lower-third-markers.c  lottie-lower-third-markers.h  lottie-lower-third-playback.c  lottie-lower-third-playback.h  lottie-lower-third-properties.c  lottie-lower-third-properties.h  lottie-lower-third-render.c  lottie-lower-third-render.h  lottie-lower-third-scene.c  lottie-lower-third-scene.h  lottie-lower-third-source.c  lottie-passthrough-transition.c  lottie-passthrough-transition.h  lottie-style-library.c  lottie-style-library.h  lottie-style-manager.cpp  plugin-main.c  plugin-support.c.in  plugin-support.h  test-source.c
src/old/: test-source copy 2 works.c  test-source copy 2.c  test-source copy.c  test-source thorvg 1213.c  test-source?.c
